Refactoring NBPApiclient