@@ -1,9 +1,10 @@
 package com.mateuszwed.currencyExchange.client;
 
-import com.mateuszwed.currencyExchange.exception.EmptyListException;
-import com.mateuszwed.currencyExchange.exception.HttpException;
 import com.mateuszwed.currencyExchange.dto.NBPDto;
 import com.mateuszwed.currencyExchange.dto.NBPRateDto;
+import com.mateuszwed.currencyExchange.exception.EmptyListException;
+import com.mateuszwed.currencyExchange.exception.HttpException;
+import com.mateuszwed.currencyExchange.exception.NullResponseException;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
@@ -14,9 +15,10 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.HttpServerErrorException;
 import org.springframework.web.client.RestTemplate;
-import java.util.Collection;
+
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @Log
@@ -27,30 +29,29 @@ public class NBPApiClient {
 
     public List<NBPRateDto> getResponseFromNBPApi(String table) {
         ResponseEntity<List<NBPDto>> response;
-        HttpHeaders headers = new HttpHeaders();
-        headers.setContentType(MediaType.APPLICATION_JSON);
-        HttpEntity<String> request = new HttpEntity<>(headers);
+        HttpEntity<String> request = new HttpEntity<>(getHttpHeaders());
         try {
             response = restTemplate.exchange(table, HttpMethod.GET, request, new ParameterizedTypeReference<>() {
             });
         } catch (HttpClientErrorException | HttpServerErrorException e) {
-            log.warning(e.getStatusCode().toString());
-            throw new HttpException("Problem with call to NPB API, status code: " + e.getStatusCode());
+            throw new HttpException("Problem with call to NPB API");
         }
-        log.info(response.getStatusCode().toString());
-
-        Optional<List<NBPDto>> nbpDtoOptional = Optional.ofNullable(response.getBody());
-        nbpDtoOptional.orElseThrow(()-> new NullPointerException("Response is null"));
-
+        List<NBPDto> nbpDtoOptional = Optional.ofNullable(response.getBody())
+                .orElseThrow(() -> new NullResponseException("Api response have null value"));
         List<NBPRateDto> rates = nbpDtoOptional
                 .stream()
-                .flatMap(Collection::stream)
-                .map(NBPDto::getRates)
-                .flatMap(Collection::stream)
-                .toList();
-        if(rates.isEmpty()) {
+                .flatMap(nbpDto -> nbpDto.getRates()
+                        .stream())
+                .collect(Collectors.toList());
+        if( rates.isEmpty() ) {
             throw new EmptyListException("List is empty");
         }
         return rates;
+    }
+
+    public HttpHeaders getHttpHeaders() {
+        HttpHeaders headers = new HttpHeaders();
+        headers.setContentType(MediaType.APPLICATION_JSON);
+        return headers;
     }
 }
